# system-setup

./: .ansible-list.yml  .env  .gitignore  README.md  ansible.cfg  justfile  pyproject.toml
.ansible/roles/check_sysadmin/tasks/: main.yml
.ansible/roles/setup_sysadmin/tasks/: main.yml
.ansible/roles/setup_system/defaults/: main.yml
.ansible/roles/setup_system/tasks/: main.yml  setup_sshd.yml  setup_users.yml
playbooks/: bootstrap.yml  setup-system.yml
