[tool.poetry]
name = "system-setup-shared"
version = "0.1.0"
description = "Ansible project to setup system settings"
authors = ["CodePoster"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
ansible = "^12.0.0"
ansible-lint = "^25.8.2"
requests = "^2.32.5"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
